--- a/_publications/styles.css
+++ b/_publications/styles.css
@@ -31,10 +31,12 @@ body, html {
 
 /* Video */
 .paper-video {
-    height: 100%;
-    width: auto;
+    width: 100%;
+    max-width: 300px; /* Adjust max width as needed */
+    height: auto;
     border-radius: 8px; /* Optional: add rounded corners */
 }
+
 
 /* Left side: GIF */
 .gif-container {
