--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -153,6 +153,9 @@
       {% if author.zhihu %}
       <li><a href="htps://www.zhihu.com/people/{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
       {% endif %}      
+      {% if author.xiaohongshu %}
+      <li><a href="https://www.xiaohongshu.com/user/profile/{{ author.xiaohongshu }}"><i class="fab fa-fw fa-xiaohongshu icon-pad-right" aria-hidden="true"></i>Xiaohongshu</a></li>
+      {% endif %}  
     </ul>
   </div>
 </div>
