--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -154,7 +154,7 @@
       <li><a href="htps://www.zhihu.com/people/{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
       {% endif %}      
       {% if author.xiaohongshu %}
-      <li><a href="https://www.xiaohongshu.com/user/profile/{{ author.xiaohongshu }}"><i class="fab fa-fw fa-xiaohongshu icon-pad-right" aria-hidden="true"></i>Xiaohongshu</a></li>
+      <li><a href="https://www.xiaohongshu.com/user/profile/{{ author.xiaohongshu }}"><i class="fab fa-fw fa-book icon-pad-right" aria-hidden="true"></i>Xiaohongshu</a></li>
       {% endif %}  
     </ul>
   </div>
