--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,4 +29,10 @@ layout: compress
     {% include scripts.html %}
 
   </body>
+  
+  <!-- 🌎 世界各地访问统计地图 -->
+  <p align="center">
+    <img src="https://visitor-badge.laobi.icu/badge?page_id=u-hai.u-hai.github.io" alt="visitor badge"/>
+  </p>
+
 </html>
