--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@ layout: compress
 
     {% include scripts.html %}
     
-  <!-- 🌎 世界各地访问统计地图 -->
+<!--   <!-- 🌎 世界各地访问统计地图 -->
   <p align="center">
     <img src="https://visitor-badge.laobi.icu/badge?page_id=u-hai.u-hai.github.io" alt="visitor badge"/>
   </p>
-
+ -->
   </body>
 </html>
