--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,15 +26,8 @@
 <div style="color:#bbb;font-size:0.8rem;">
     TOTAL VIEWS: <span id="busuanzi_value_site_pv"></span>
 </div>
-<!-- 🌐 世界访问统计展示模块 -->
+<!-- 🌐 动态世界访问地球 -->
 <div align="center" style="margin-top: 40px;">
-  <!-- 🔢 访问计数器 -->
-  <p>
-    <img src="https://visitor-badge.laobi.icu/badge?page_id=u-hai.u-hai.github.io" alt="Visitor Count" />
-  </p>
-
-  <!-- 🗺️ ClustrMaps 世界地图 -->
-  <a href="https://clustrmaps.com/site/1bz8h" title="Visit tracker">
-    <img src="https://www.clustrmaps.com/map_v2.png?d=ut8xCKK0f1uPWfY5gZz9cF4cuDnYdsJwr_0uDduYPcU&cl=ffffff" alt="World Visitor Map" />
-  </a>
+  <p style="margin-bottom: 10px; font-weight: bold;">🌍 Visitor Map</p>
+  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=s4FOtRt-xxeAAs-Catbe6QaM8V0X-j73u9t1wgW22Zo"></script>
 </div>
