--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,11 @@
     TOTAL VIEWS: <span id="busuanzi_value_site_pv"></span>
 </div>
 <!-- 🌐 动态世界访问地球 -->
-<div align="center" style="margin-top: 4px;">
-  <p style="margin-bottom: 10px; font-weight: bold;">🌍 Visitor Map</p>
-  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=s4FOtRt-xxeAAs-Catbe6QaM8V0X-j73u9t1wgW22Zo"></script>
+<div align="center" style="margin-top: 40px;">
+  <p style="margin-bottom: 10px; font-weight: bold;">🌐 Visitor Map</p>
+  <div style="max-width: 400px; transform: scale(0.3); transform-origin: top center;">
+    <script type="text/javascript" id="clstr_globe"
+      src="//clustrmaps.com/globe.js?d=s4FOtRt-xxeAAs-Catbe6QaM8V0X-j73u9t1wgW22Zo">
+    </script>
+  </div>
 </div>
