--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,10 +26,9 @@
 <div style="color:#bbb;font-size:0.8rem;">
     TOTAL VIEWS: <span id="busuanzi_value_site_pv"></span>
 </div>
-<!-- 🌐 动态世界访问地球 -->
-<div align="center" style="margin-top: 40px;">
-  <p style="margin-bottom: 10px; font-weight: bold;">🌐 Visitor Map</p>
-  <div style="max-width: 400px; transform: scale(0.3); transform-origin: top center;">
+<!-- 🌐 小型居中地球访问图 -->
+<div style="display: flex; justify-content: center; margin-top: 30px; margin-bottom: 10px;">
+  <div style="width: 200px; height: 200px; overflow: hidden; transform: scale(0.3); transform-origin: center;">
     <script type="text/javascript" id="clstr_globe"
       src="//clustrmaps.com/globe.js?d=s4FOtRt-xxeAAs-Catbe6QaM8V0X-j73u9t1wgW22Zo">
     </script>
