--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,22 +13,34 @@
       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
     {% endif %}
     {% if site.atom_feed.hide != true %}
-    <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
+      <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}">
+        <i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> 
+        {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a>
+      </li>
     {% endif %}
   </ul>
 </div>
 {% endif %}
 
-<div class="page__footer-copyright">
-  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}, {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated {{ "now" | date: '%Y-%m-%d' %}}
-</div>
-<div style="color:#bbb;font-size:0.8rem;">
-    TOTAL VIEWS: <span id="busuanzi_value_site_pv"></span>
-</div>
-<!-- 🌐 小型居中地球访问图 -->
-<div style="display: flex; justify-content: center; margin-top: 30px; margin-bottom: 10px;">
-  <div style="width: 200px; height: 200px; overflow: hidden; transform: scale(0.3); transform-origin: center;">
+<!-- ✅ 页脚左右排布：左文字 + 右地球图 -->
+<div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; margin-top: 10px;">
+  <!-- 左侧：版权信息 -->
+  <div>
+    <div class="page__footer-copyright">
+      &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }},
+      {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }}
+      <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
+      <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>,
+      a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
+      Site last updated {{ "now" | date: '%Y-%m-%d' }}
+    </div>
+    <div style="color:#bbb;font-size:0.8rem;">
+      TOTAL VIEWS: <span id="busuanzi_value_site_pv"></span>
+    </div>
+  </div>
+
+  <!-- 右侧：缩小地球图 -->
+  <div style="width: 100px; height: 100px; overflow: hidden; transform: scale(0.4); transform-origin: center;">
     <script type="text/javascript" id="clstr_globe"
       src="//clustrmaps.com/globe.js?d=s4FOtRt-xxeAAs-Catbe6QaM8V0X-j73u9t1wgW22Zo">
     </script>
